<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.soundplayer.PlaylistActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/ScrollViewStyle"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:orientation="vertical"
                android:padding="@dimen/small_padding">

                <TextView
                    style="@style/ActivityInformation"
                    android:text="@string/playlist_activity_information" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/custom_list_1"
                style="@style/PlayListLayout">

                <ImageView
                    style="@style/PlayListImageView"
                    android:src="@drawable/playlist" />

                <TextView
                    style="@style/PlaylistActivityName"
                    android:text="@string/custom_list_1" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/custom_list_2"
                style="@style/PlayListLayout">

                <ImageView
                    style="@style/PlayListImageView"
                    android:src="@drawable/playlist" />

                <TextView
                    style="@style/PlaylistActivityName"
                    android:text="@string/custom_list_2" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/hiphop_list"
                style="@style/PlayListLayout">

                <ImageView
                    style="@style/PlayListImageView"
                    android:src="@drawable/hiphop" />

                <TextView
                    style="@style/PlaylistActivityName"
                    android:text="@string/hiphop" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/pop_list"
                style="@style/PlayListLayout">

                <ImageView
                    style="@style/PlayListImageView"
                    android:src="@drawable/pop" />

                <TextView
                    style="@style/PlaylistActivityName"
                    android:text="@string/pop" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/rock_list"
                style="@style/PlayListLayout">

                <ImageView
                    style="@style/PlayListImageView"
                    android:src="@drawable/rock_n_roll" />

                <TextView
                    style="@style/PlaylistActivityName"
                    android:text="@string/rock" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/movie_list"
                style="@style/PlayListLayout">

                <ImageView
                    style="@style/PlayListImageView"
                    android:src="@drawable/movie" />

                <TextView
                    style="@style/PlaylistActivityName"
                    android:text="@string/movie" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/dance_list"
                style="@style/PlayListLayout">

                <ImageView
                    style="@style/PlayListImageView"
                    android:src="@drawable/dance" />

                <TextView
                    style="@style/PlaylistActivityName"
                    android:text="@string/dance" />
            </LinearLayout>
        </LinearLayout>


    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        style="@style/FloatingButton"
        android:backgroundTint="@color/colorPrimaryDark"
        android:clickable="true"
        android:src="@drawable/plus"
        app:borderWidth="0dp"
        app:layout_anchor="@id/main_layout"
        app:layout_anchorGravity="bottom|end" />
</android.support.design.widget.CoordinatorLayout>
